# game-2d

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Game2D.sln  README.md  run-clang-format.py  run-clang-tidy.sh
Dependencies/: CMakeLists.txt
Game2D/: ClassDiagram.cd  Game2D.vcxproj  Game2D.vcxproj.filters  packages.config
Game2D/res/levels/: level0.lvl  level1.lvl
Game2D/res/shaders/: sprites.fs  sprites.vs
Game2D/src/: Animator.h  Application.cpp  Block.cpp  Block.h  BlockAnimator.cpp  BlockAnimator.h  Constants.h  Enemy.cpp  Enemy.h  EnemyAnimator.cpp  EnemyAnimator.h  Game.cpp  Game.h  GameInformation.h  GameLevel.cpp  GameLevel.h  GameObject.cpp  GameObject.h  Observer.h  PengoAnimator.cpp  PengoAnimator.h  Player.cpp  Player.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  SpriteRenderer.cpp  SpriteRenderer.h  Subject.h  Texture.cpp  Texture.h  Wall.cpp  Wall.h  WallAnimator.cpp  WallAnimator.h  util.cpp  util.h
Game2D/src/Controller/: Game.cpp  Game.h
Game2D/src/Model/: Block.cpp  Block.h  Enemy.cpp  Enemy.h  GameInformation.cpp  GameInformation.h  GameLevel.cpp  GameLevel.h  GameObject.cpp  GameObject.h  Player.cpp  Player.h  Score.cpp  Score.h  Wall.cpp  Wall.h
Game2D/src/View/: Application.cpp  AudioData.h  BlockAnimator.cpp  BlockAnimator.h  DisplayBlock.cpp  DisplayBlock.h  EnemyAnimator.cpp  EnemyAnimator.h  GameInformation.cpp  GameInformation.h  GameView.cpp  GameView.h  PengoAnimator.cpp  PengoAnimator.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  SoundBuffer.cpp  SoundBuffer.h  SoundDevice.cpp  SoundDevice.h  SoundManager.cpp  SoundManager.h  SoundModule.cpp  SoundModule.h  SoundSource.cpp  SoundSource.h  SpriteRenderer.cpp  SpriteRenderer.h  Texture.cpp  Texture.h  WallAnimator.cpp  WallAnimator.h
TestGame2D/: TestGame2D.vcxproj  test.cpp
Tests/: CMakeLists.txt  TestEnemy.cpp  TestGameLevel.cpp
